name:                hypergeom
version:             0.1.0.0
-- synopsis:
description:         Hypergeometric function of a matrix argument
homepage:            https://github.com/stla/hypergeom#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2019 Stéphane Laurent
category:            Mathematics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hypergeom
                     , Hypergeom2
                     , Hypergeom3
                     , Hypergeom4
                     , Hypergeom5
                     , Hypergeom6
                     , Hypergeom7
                     , Hypergeom8
                     , Hypergeom9
  build-depends:       base >= 4.7 && < 5
                     , combinat
                     , array
                     , vector
                     , containers
                     , lens
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/hypergeom
